# TradeAlerter

./: README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_check_orders.py  test_tradealerter.py
tests/data/: orders.json  response_get_portfolio.json  response_list_accounts.json
tradealerter/: check_orders.py  config_example.ini  configurator.py  fetch_emails.py  gui.py
tradealerter/brokerages/: __init__.py  eTrade_api.py  weBull_api.py
