[tool.poetry]
name = "tradealerter"
version = "0.0.1"
description = ""
authors = ["adonunes <adonay.s.nunes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rauth = "0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
